src/test/results/deca/codegen/invalid/Objet/HeapOverflow.ass
etiquette:
	NEW #100000000, R2
	BRA etiquette

	HALT
